#2 Added mail message from file test