@@ -36,6 +36,7 @@
 		<hadoop.version>2.4.0</hadoop.version>
 		<avro.version>1.7.6</avro.version>
 		<avro.mapred.classifier>hadoop2</avro.mapred.classifier>
+		<log4j.version></log4j.version>
 		<PermGen>64m</PermGen>
 		<MaxPermGen>512m</MaxPermGen>
 	</properties>
@@ -46,18 +47,6 @@
 				<groupId>org.apache.spark</groupId>
 				<artifactId>spark-core_${scala.binary.version}</artifactId>
 				<version>1.1.0</version>
-			</dependency>
-			<dependency>
-				<groupId>org.scalatest</groupId>
-				<artifactId>scalatest_${scala.binary.version}</artifactId>
-				<version>2.2.2</version>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>4.10</version>
-				<scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.hadoop</groupId>
@@ -131,6 +120,33 @@
 				<groupId>commons-io</groupId>
 				<artifactId>commons-io</artifactId>
 				<version>2.4</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-api</artifactId>
+				<version>2.1</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-core</artifactId>
+				<version>2.1</version>
+			</dependency>
+			<dependency>
+				<groupId>joda-time</groupId>
+				<artifactId>joda-time</artifactId>
+				<version>2.5</version>
+			</dependency>
+			<dependency>
+				<groupId>org.scalatest</groupId>
+				<artifactId>scalatest_${scala.binary.version}</artifactId>
+				<version>2.2.2</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>4.10</version>
+				<scope>test</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -248,9 +264,6 @@
 						<reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
 						<junitxml>.</junitxml>
 						<filereports>TestSuite.txt</filereports>
-						<argLine>-Xmx3g -XX:MaxPermSize=${MaxPermGen}
-							-XX:ReservedCodeCacheSize=512m</argLine>
-						<stderr />
 					</configuration>
 					<executions>
 						<execution>
@@ -304,7 +317,7 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
-		
+
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
